    - move journalctl to separate module journal;
    - move journald service to separate module journal;
    - move journald to separate module journal;
    - move journal tests to separate module journal;
    - move libjournal-core to separate module journal;
    - move libjournal-internal to separate module journal;
    - move journald.conf to separate module journal;
 * sd-messages.h:
    - remove unused id SD_MESSAGE_MACHINE_START;
    - remove unused id SD_MESSAGE_MACHINE_STOP;
    - remove unused id SD_MESSAGE_TIMEZONE_CHANGE;
 * coredump:
    - move coredump sysctl config to separate module journal;
    - move coredump man pages to separate module journal;
    - move coredump completions to separate module journal;
    - move systemd-coredumpctl to separate module journal;
    - move systemd-coredump to separate module journal;
    - remove support;
 
   systemd (214.2)
~~~~~~~
 * fix quote udev rule;
 * journalctl:
    - remove qrencode support;
 * journal:
    - rename libsystemd-journal.pc to journal.pc;
    - use name journal instead of systemd in journal.pc;
    - rename libsystemd-journal.sym to journal.sym;
    - use abi prefix JOURNAL instead of LIBSYSTEMD_JOURNAL in journal.sym;
    - rename unit systemd-journald.socket to journald.socket;
    - rename unit systemd-journald.service to journald.service;
    - rename systemd-journald to journald;
    - rename system group systemd-journal to journal;
    - rename unit systemd-journal-flush.service to journal-flush.service;
    - rename library libsystemd-journal.so to journal.so;
    - rename man systemd.journal-fields to journal-fields;
    - rename kernel parameters systemd.journald.* to journald.*;
 * remove systemd-journal-remote program;
 * remove systemd-journal-gatewayd program, service and socket;
 * remove gnutls support;
 * remove microhttpd support;
 * remove journal catalog support;
 * ansi color:
    - change color status messages for jobs in progress state;