@@ -1,109 +1,0 @@
-/***
-  This file is part of systemd.
-
-  systemd is free software; you can redistribute it and/or modify it
-  under the terms of the GNU Lesser General Public License as published by
-  the Free Software Foundation; either version 2.1 of the License, or
-  (at your option) any later version.
-***/
-
-/* Original symbols from systemd v38 */
-
-JOURNAL_38 {
-global:
-        sd_journal_print;
-        sd_journal_printv;
-        sd_journal_send;
-        sd_journal_sendv;
-        sd_journal_stream_fd;
-        sd_journal_open;
-        sd_journal_close;
-        sd_journal_previous;
-        sd_journal_next;
-        sd_journal_previous_skip;
-        sd_journal_next_skip;
-        sd_journal_get_realtime_usec;
-        sd_journal_get_monotonic_usec;
-        sd_journal_get_data;
-        sd_journal_enumerate_data;
-        sd_journal_restart_data;
-        sd_journal_add_match;
-        sd_journal_flush_matches;
-        sd_journal_seek_head;
-        sd_journal_seek_tail;
-        sd_journal_seek_monotonic_usec;
-        sd_journal_seek_realtime_usec;
-        sd_journal_seek_cursor;
-        sd_journal_get_cursor;
-        sd_journal_get_fd;
-        sd_journal_process;
-local:
-        *;
-};
-
-JOURNAL_183 {
-global:
-        sd_journal_print_with_location;
-        sd_journal_printv_with_location;
-        sd_journal_send_with_location;
-        sd_journal_sendv_with_location;
-} JOURNAL_38;
-
-JOURNAL_184 {
-global:
-        sd_journal_get_cutoff_realtime_usec;
-        sd_journal_get_cutoff_monotonic_usec;
-} JOURNAL_183;
-
-JOURNAL_187 {
-global:
-        sd_journal_wait;
-        sd_journal_open_directory;
-        sd_journal_add_disjunction;
-} JOURNAL_184;
-
-JOURNAL_188 {
-global:
-        sd_journal_perror;
-        sd_journal_perror_with_location;
-} JOURNAL_187;
-
-JOURNAL_190 {
-global:
-        sd_journal_get_usage;
-} JOURNAL_188;
-
-JOURNAL_195 {
-global:
-        sd_journal_test_cursor;
-        sd_journal_query_unique;
-        sd_journal_enumerate_unique;
-        sd_journal_restart_unique;
-} JOURNAL_190;
-
-JOURNAL_196 {
-global:
-        sd_journal_set_data_threshold;
-        sd_journal_get_data_threshold;
-} JOURNAL_195;
-
-JOURNAL_198 {
-global:
-        sd_journal_reliable_fd;
-} JOURNAL_196;
-
-JOURNAL_201 {
-global:
-        sd_journal_get_events;
-        sd_journal_get_timeout;
-} JOURNAL_198;
-
-JOURNAL_202 {
-global:
-        sd_journal_add_conjunction;
-} JOURNAL_201;
-
-JOURNAL_205 {
-global:
-        sd_journal_open_files;
-} JOURNAL_202;
